--- a/FoodMenu/food/templates/food/detail.html
+++ b/FoodMenu/food/templates/food/detail.html
@@ -1,4 +1,28 @@
-<h1>{{ item.item_name }}</h1>
-<h2>{{ item.item_desc }}
-    ${{ item.item_price }}
-</h2>
+{% extends 'food/base.html' %}
+{% block body %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="{{ item.item_image }}" class = "card" style="width: 300px">
+        </div>
+        <div class="col-md-6">
+            <h1>{{ item.item_name }}</h1>
+            <h2>{{ item.item_desc }}</h2>
+            <h3> ${{ item.item_price }}</h3>
+
+            <div class="row">
+                <div class="col-auto">
+                    <a href="{% url 'update_item' item.id %}" class="btn btn-success">Edit</a>
+                </div>
+                <div class="col-auto">
+                    <a href="{% url 'delete_item' item.id %}" class="btn btn-danger">Delete</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+{% endblock %}
