--- a/FoodMenu/food/templates/food/base.html
+++ b/FoodMenu/food/templates/food/base.html
@@ -15,8 +15,20 @@
             <a class="nav-item nav-link active text-primary px-2" href="{% url 'create_item' %}"> Add Item</a>
             <a class="nav-item nav-link active text-primary px-2" href="#"> Delete Item</a>
             <a class="nav-item nav-link active text-primary px-2" href="#"> View Item</a>
+            {% if user.is_authenticated  %}
+                <a href="{% url 'logout' %}">Logout</a>
+            {% else %}
+                <a href="{% url 'login' %}">Login</a>
+            {% endif %}
         </div>
     </nav>
+    {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" >
+            {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
     {% block body %}
     {% endblock %}
 </body>
