--- a/FoodMenu/food/templates/food/base.html
+++ b/FoodMenu/food/templates/food/base.html
@@ -16,9 +16,10 @@
             <a class="nav-item nav-link active text-primary px-2" href="#"> Delete Item</a>
             <a class="nav-item nav-link active text-primary px-2" href="#"> View Item</a>
             {% if user.is_authenticated  %}
-                <a href="{% url 'logout' %}">Logout</a>
+                <a class="nav-item nav-link active text-primary px-2" href="{% url 'profile' %}">Profile</a>
+                <a class="nav-item nav-link active text-primary px-2" href="{% url 'logout' %}">Logout</a>
             {% else %}
-                <a href="{% url 'login' %}">Login</a>
+                <a class="nav-item nav-link active text-primary px-2" href="{% url 'login' %}">Login</a>
             {% endif %}
         </div>
     </nav>
